Fazendo tela de comissionamento e começando a aplicar as logicas

--- a/client/AplicacaoPoo.Estrutural.Windows/frmComissionamento.resx
+++ b/client/AplicacaoPoo.Estrutural.Windows/frmComissionamento.resx
@@ -57,4 +57,90 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureboxHomem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAD
+        rwAAA68BGB6xfQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAABJFSURBVHhe7Z0J
+        VFRXmsdNd2ZOTzqznenpnume7pnumT5zOpmknZge4walmOgY0yYKKhTiNq6ALIq4gBaNlMUmArIJgmy1
+        AVJQVBUFIiJLFp1s3aaj6UxiG5O44AZUFRj95t7HLax6dWsBq6gq+/7P+Z3Eot599/t/991733v3vZrC
+        NH4JVsr+JVAoe4P8k+lPTXNCpc8HhklvzotQ/oh8xPQ4ShCi/Afyv1YKDJVuRQ0AEBryEdPjqMAwWcXc
+        lbLp5J9jChRKe0kDgICw2kXkY6bHSQJB55MowZcR58hHnATCmsXm5BM+nDIFniB/ZnpchLr5BHOSBeHV
+        /4Y/C4qo/Dv0+RcWyecICJXO4zZiehwET6AkR6PEfjOWYNTNo/nA05ZdvyWCsFo52ZjJnzVHWPMMSmgz
+        P8H4lA81ik6bzx9ynQ0DfqrZYbV/i45wIZrwqVEiH/ASa+ZLymdWzA2VPkuKZPIV4W4bn7MHhMt+HRhW
+        G8IhlG3gxvdQ6VHE+yh5Y139o4Anh2S3TN7S3LDaaehoTiRH81V+kjyJIFT6OqkG02RqTojy79GRnYyS
+        /gktMZMF7XoBkwf1yqqq76IuXIzMN/CT4QXuCNZUfIdUjcnTClgh/wUy/WNeErzJh9M2qp8i1WPypOYK
+        a2Yhw6/zEuALvB0UKv0BqSaTJ4QvyCCjh3nG+xCyT2auqvo+qS6TO4XPs5HJt21N9znOsuHAzUITrL9B
+        xv6RZ7TPgk4Jj5OqM7lDgjBZGc1oXwZffCLVZ3oUoa4/EBlq7xKtD1N7iQ0FbhA61z9DN9j3EQilsSQM
+        pokIHUVzacb6DULpVzNClH9BwmEar5CJjTam+hloQhhOwmEaj7jVN2FSE99QP6SNhMQ0HqGx37zy1t+5
+        Pye8+h9JWEyuChlnuzKHR0SUAlZuVlD/5mmCwmWwa08dLIig/92SAKF0NQmLyRVN21jyZ8i4u3wj+aiP
+        NYGxpxXaKpsheocS5grp33Mn62MUICtUwdWTWhjubeUaAe171tTWktCYXJFgpexFupEPwcm+1qHjkmDm
+        q3YtKItUkICSsnitjLrdeHltnRx27a2HE0dVcEU/mnRLVKVN1O2sqb1EQmNyRciwjXQjH4K7f34yLME9
+        w0W1BhpRgnIkDVyjWBOtgKUb5DB/1cNycEPCjWXFJgVsjlNCiqgeSg6dAP3xJvhcp6GWbcmnGq1VveyB
+        J7UkPCZnCgyTFdJMtCRT3EBNyGRjQg1tyXo5tY6WsGcHxiHUA+hpJlqiLW+mJsQb7ElyYR4glG0g4TE5
+        EzLsgo2BPC632o7H3gJPCml1tCJUKibhMTkTMuyWjYEW4FM/WiK8xe+bNdR68ign4TE5EzLrHs88Kwoy
+        T1AT4U2EW51dj5ApSXhMjoRvodINfMhHTS3UJHiTspxGal3HEEp1JEQmR8Jr6qgGEuIS66gJ8DbXO7Sw
+        IMLhtYduEiKTIwWsqvopxbwxzip97+g3czj9BLXOhHdJiEyOJBDW/BPFPI4du3zz6DeDr0wuWmO3F3ib
+        hMjkSOQ2sI2BAqEUfqdyfmXO25Tanwt0kRCZHIl75ItiYOKeeqrhvsaNUzpYuNq2FwgIk7aSEJkcSiT6
+        FjLM5jSwu1ZNNZzP5+pG6CqrhvrsMmjOK4dTR6vA0GN908gVLmuaQJNfwZWjPVIB71TL4PYp13ogSWqD
+        Vd05QqV1JEImZ0KGWT0DMC9cCne66GZjfqtQQsq2bBAE7IBnno+2oWR/AXU7R8wT7LQp57mp2yD09X1Q
+        nVYC/R32J6P6ymbr5HPU5pLwmJwJGdZnaR6+Y4fv7tHMPlcrh/+Yap0oPrWSo9RtHbHkv/dQyzKz/NfJ
+        1O0wHdWUBhAqTSDhMTnTsvXS48gwq2cB7PUAuGt+9pfbYOoLMRCzVgyy9KPwnlQOV3RN8HVrE3yhVVG3
+        c8Zgl44bTq63q+GTxgY4U1YDeXvyYMmi0YYR/Jr9BqCtsF4jME8oG4qJqWE3g1zRoKLo0JCiCE4eLuNm
+        /mYTb3baH8cvogThRNH+5gkuNNTDjZP294dXKpnr/ca6mvuXK4sBxzQoL8wmYTLRNKgsWoONMvM/W6vH
+        jLzOW/1jDxOa8OXuzkNjdTJIJSXU77jKtTY1xK8Tw5qQ/XC2Rkb9Dg28CMVc7+Op5WPxYFCMq0i4THwN
+        KgovjBpVCAM1+ZCTVDHuBoAnfM89HwXrVqTAM89FcjN42vdcISJ4P8yeFQ/Br+6FX/0qBr7UNlG/x8dy
+        mdhbhUe5WHBMODaDouhjEi6TpQakR541HyV3K/PgamoSSFOKORPxUGDoppvNJ2D2dhBFZnL/v265CMLf
+        sD9WOwKfWeAG1FZUyXX3L74YAwVJ+dTv8mm3OAv4v6JcLpaBqlwuNi4+ZeG/k7CZzBpUFoaZDcJHy41D
+        qaDdnc6ZuGita93vVX0zlzQdOeqPigpg+n/F2nzPFRpzyriy7nSOnvvjYSBubZrN92i8JVdz9Q5CDfdr
+        8T7oP3SAi8kcn0FetJKEzWSWQVkc/7ABoKOkOh/eTErljFy+WU41ms/d0xpI3CCBr9AZAP73R/V1IIoe
+        7Q3GC+4BDsRkjf0bNwhZhmunk79TtXD1Dl5fwx39OBbL2FCsMSRsJrMGFcU7sDmDtUfgqjgJGbcX/iDa
+        xxm5KU5JNdpX+bJNx9V7y6YKLg4OFBOOjTSAeBI2k1noFGnt6BFSCHdKszhuZKfC8vW1kH7AyQrgTjWY
+        Wk+AUV0HhiYFGFUKMDQrwaBpAFM76g26J7B+kCuzEYwtvDJb6l0qEz9PkB1bwMVwpzSbi8c8DOCzHRI2
+        k1noqJgx2gAecrNAAhmJx6AFnVfTTB5Gp3xGbQMYGuWOQckzdVivIjZ2qKA/VwLG07zz+R70N9RwqOVY
+        YVumJfiJodPJ6XCrMN0qJoxBVsJeKskXqEueQuYYLI3qzxPD+cxs6O+kH22mDjUlMXTwEWy57a2yPLiW
+        IQIT70jGSaVtT4NfpiUfyhvgeqYIbqIYLGNCDIHyEHtnAE1DysIGS7NuZKZAf74Ydbd2rgGg5BmaULdM
+        SQ4fo75xbLshjWL01ExRbl0eZjxloiHCZnuCUa/gGjCOwTImBLsraE9GRXGApVl3juXAYHUemDrtX4Ax
+        ocZhbFOBsRmN1fwkqVCS0BBhOvWwmzf1aOF61gHUsDK47t6yrDHw0ILLxHMKF8qkYVRXc3XHMVjGZFAU
+        zSLhMtE0qCiSWRqGMba6+BwAvu9/RgumLnTubmeSdld+DK6lJYGx3f7RawVuJE7KpDFUX2oVAwYlv4aE
+        yWRPoCx4GjWC05bGGTW1cprJE+FWaS7cOIyGFcrf3MgFg7w4wzIGg7KoE6qqvkvCZHIk6BQ9OagoDDco
+        iiVoXvAqnFM/hUw18UyeEAP1ldx5+a1j+Who8czzhaa+1iIcx5C8aDGOYVBeJASl8ttccEwTk6m3tYtm
+        9kS4Ky+Ha+J9cD3btUu746andTmpNpO7ZOrRx1HNtsPAGR3oKpq5x8jxCx62xCu55/9jE+u4c/T01Hoo
+        ECu5tfz4nQD4gZOYnXWwMVYBCbvrIC2lAWqOqOAy5aUQTjDCufa/JtVmcpcGevXfR+be45lN5W2FGoI3
+        On9m3xXwyySO5jTaXZJGgf2EnKc03KvTUwwfA7+soTJf5ZF3BeHe4epJ52sSTH169uNRntJIX2sEzXQM
+        fj9QUnI9NXlm8OpiPAQcz2uEjqpm6KxuHnunkOVrY+yBXyPzbr3D8/8bcF7556S6TO4WPhtAk8FrfOPx
+        kZ8lPmG1htDMy6tk3JiuKmuyeamUJfjhTmmByuFj3jE7lXC2zsGziT26g6SqTJ7ScK9+L9V8xMUWDTdx
+        K8xq5I7sN+VqMP7h93D/68vj4valS/DJ+c+g6thJbpKoKW925Y0kxqEzreyFkJ4WvKX9K2T2LZ75drl3
+        8UOYiB4Mm2D4zXZqmTRGenV5pIpMnhYyPI2fAEfcv91P0uq67n38PrUsO4wYezX/TKrH5GmN9gL6LyiJ
+        oPPOKXgwNEBS61zfXLpIL8c+ElI1pskSMn0ZLwmOeesk3L92haTYjkaG4d6FD+jb2+cz0OvZNX5vCJnf
+        yEuGU0be64VvrnwGD+7eggcmAzwwDML9/mtw79PzXCOhbeMIU4/+ZVIdpsmWoU/9I3RaeJ2WmMkA7fso
+        qQqTt2Ts1c9DyXDpErGbeRf62M/B+ITIFcIHvAR5EN2n7Jzfx2TqaY1Cyblvmyx3o/vU1H3yZ2S3TL6k
+        4R7dUpSk27ZJcw94TQK+K0l2x+SLMva0/wQlq4WfvEfkjqlXFw8g+hbZDZOvy9itEwx3a89zC0XpSXWK
+        qUc3YupqaYNO9fdIsUz+pCF1ddNQQykYtTKytNyFxtCtAWN7PRiaq2BIWQwGdVUjKY7J32Rsri63XJk7
+        pEAJPXEMDE2VYGyp4RqGQSPl1vAbVBXUpdxD6qpjpDgmf5OppTbfJqHjwFBXAsN6RRIpjsnfZGypLqQl
+        1hkG1PVzwwZ+EKRPF0KKY/I3GVpqqmkJtgsaAoytcqsHRkf69OtIcUz+JjR+a6iJtgLNC9CcwNSBf4XE
+        dpKIl6OT4pj8Tcam4+epSVeWjE4E9XXcrJ+fdEvYSh8/lkFVfnNIiRKOTgXxaZ1Rh8b1U42jD3xSkk1H
+        pyfFMfmToLPzSVOX+s6jXAgi3GDP9fmhjH26IEoyJ8S9Pm0gKZbJX2TqbS2kJXMijPS0HiHFMvmDTN2t
+        C1HiRviJfASGTWd0C0jxTL6qoZ62H+JlWsN9Hloc0q2vY8u/fVDkBRKJwz36AZukuZmRXv0Q+q8Eepr+
+        kuyeyVsCgCfwpVqUkM8tkzRJXBnp029kZwhe0ki3fjpKQi8vKZNPX+u5e736AFItJk/L0KX/MTK+CjGJ
+        i0BdQm3q1f4rqSaTu5Uelf7DOKGot/9ki5Fivk9wu6NlZOfq1P8tScz9Cak206NKJBI9eWBLesnCmbH3
+        X3p+K2hyyqjm+wLnqqSA6zj/pZgHyRvSTlSIKr5DwmCaiNIi03cHByUYsalmtgTvo5rvC5Tvyx+rJyZk
+        foIpc1vmfhIOk6vKjTu0cFPwvsuWZlryTmUtNQHeBP9YVfD8ndT6rn1tb392fMYyEh6TPeUmZPw8Nizl
+        g1lTI6lGmlm9eA8Mdo379W0eRZVVSq2rGRxTwqrUjwtSC35BwmUyq2BrwdO716U1BU3f9oBmHo3suGxq
+        IrzBZfUJmD89hlpPPjhG0SZxmzKxhL1LEOs3myUHXxdsH6GZ5YgZv4z0iQnh17omCHmZ3vU7Ysnc7fey
+        YrPy8MUsYsWfllDwwvBXd9+mmeMqM1EjaMwc/+8Cu4vzCqXdcd9VIl7bfTd/x6G1xJbHXzkJOS9ELt9/
+        YeZUuiETIX1b5tjPu00GeP5RgWb8gdOiqPUZL9iLmNCUz0p2H358f0qmRJT1vYSI1HbBi9Euj/PjYem8
+        BDhZcJybjdOS5g7untZCnaQElgbtoNbhUUHeQNL6tO6qzKLH5wHUkBDlt/dtFB95dU7cN7Sg3U3owl0o
+        ScVwTe+eV8HjpL95rAbEkenwyoxY6j7dzWLklSQqsxxfBCM2+qfEWyWbVi5IHKAF6Wlm/2cURK7YDyV7
+        cqGnrAquaFRgdPLzswOnNfARGtfbjpRDQeJh2PhGEsx5wT3d/EQIW5g4lBmXGUXs9B+JozJmbVya/Dkt
+        KG+Ck4m7b3wdAbN5WTKsX7KXm8UvnBnLjcW07bzN1uDkL3N25AiIvb6r0j2lP9i1JvV0wLRoaiCMiYN7
+        tHhhyvsFe7N/TOz2LaVukpQtmDF6w4bhObDHv9l8sJTY7n3hO17bVogu0irL8BzRK0UXvH63EVdg8zL7
+        N20YnmXLsuQ/erURbBemvEerGGPySFiVepakY3KVGinJo1WIMfmII9NzSFomR6U7Mn+64CU24fMV8Aqk
+        4oTcn5P0eF6xwpTf0irC8B74FJGkx7PKjc+di+/C0SrB8B54wUluYtZskibPKSEitY9WAYb32bU69QxJ
+        k2eETzkWzZ6cmzqM8YNvuClFIs/9bN3Bbeki2o4ZvoMkOsNzr7WLC0/5gLZThu+wY1XqOZIu92v5KzsN
+        tJ0yfIfQhYmDJF3uFR7/vXlvnOEaAdOiwCPzgNz47CDaDhm+x+Hth93/tHJ2bEYkbWcM3yM7JnsDSZv7
+        JInKOEjbGcP3EEdmpJK0uU9pkRlZtJ0xfI+D0Znu/yVT1gD8B/FWSSZJmxNNmfL/pUoMbpsIDFkAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
 </root>
